--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -265,7 +265,7 @@ jobs:
           path: anchorcore.xcframework
   upload:
     name: Upload builds
-    if: "!failure() && github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && github.ref == 'refs/heads/main')"
+    if: "!failure() && (github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))"
     runs-on: ubuntu-latest
     needs:
       - calculate_version
