--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -333,6 +333,6 @@ jobs:
       - name: Upload builds
         run: |-
           export PATH="$PATH:$HOME/go/bin"
-          ghr --replace --draft --prerelease -p 5 "v${VERSION}" dist
+          ghr --replace -p 5 "v${VERSION}" dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
