--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,9 @@ on:
           - Android
           - Apple
   push:
-    branches:
-      - main
-      - dev
+    tags:
+      - 'd*'  # Dev builds: build but don't release
+      - 'v*'  # Release builds: build and release
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-${{ github.event_name }}-${{ inputs.build }}
@@ -272,7 +272,7 @@ jobs:
           path: anchorcore.xcframework.zip
   upload:
     name: Upload builds
-    if: "!failure() && (github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))"
+    if: "!failure() && (github.event_name == 'workflow_dispatch' || startsWith(github.ref, 'refs/tags/v'))"
     runs-on: ubuntu-latest
     needs:
       - calculate_version
